# prompts

./: .gitignore  Brewfile  PROMPT_SCRATCHPAD.md  README.md  TODO.md  project_setup.sh  pyproject.toml  requirements.txt  setup.py
DEBUG_SCRIPTS/: debug_zip_structure.py  list_repo_files_debug.py
PLANS/: anthropic-docs-mirroring.md  openai_platform_static_chunk_plan.md  openai_platform_static_chunk_progress.md  openai_platform_static_chunk_progress_20251012.md  transformers-docs-mirroring.md
REFERENCE/: openai_docpage_example_responses.md
SPECIALIZED_CONTEXT_AND_DOCS/: Modern-React-19-Best-Practices-with-Vite.md  UV_DOCS_MIRROR.md  bash_brackets_usage_cheatsheet.md  brew-casks.txt  brew-formulae.txt  gsap_greensock_llms.txt  kimi_api_docs.md  kit_full_llms_txt.md  livekit_full_llms_txt.md  livekit_llms_txt.md  reinstall-brew.sh  uv_cheatsheet.md
SPECIALIZED_CONTEXT_AND_DOCS/AI_SDK_DOCS_MIRROR/: manifest.json
SPECIALIZED_CONTEXT_AND_DOCS/AI_SDK_V6_DOCS_MIRROR/: manifest.json
SPECIALIZED_CONTEXT_AND_DOCS/ANTHROPIC_API_DOCS_MIRROR/: administration-api.md  beta-headers.md  canceling-message-batches.md  claude-code-analytics-api.md  claude-on-amazon-bedrock.md  claude-on-vertex-ai.md  client-sdks.md  creating-message-batches.md  deleting-message-batches.md  errors.md  files-content.md  files-create.md  files-delete.md  files-list.md  files-metadata.md  getting-help.md  handling-stop-reasons.md  ip-addresses.md  listing-message-batches.md  manifest.json  messages-batch-examples.md  messages-examples.md  migrating-from-text-completions-to-messages.md  models.md  openai-sdk.md  overview.md  prompt-tools-generate.md  prompt-tools-improve.md  prompt-tools-templatize.md  rate-limits.md  retrieving-message-batch-results.md  retrieving-message-batches.md  service-tiers.md  skills-guide.md  supported-regions.md  usage-cost-api.md  versioning.md
SPECIALIZED_CONTEXT_AND_DOCS/DSPY_DOCS_MIRROR/: README.md
SPECIALIZED_CONTEXT_AND_DOCS/FASTAPI_DOCS_MIRROR/: README.md
SPECIALIZED_CONTEXT_AND_DOCS/GSAP_DOCS_MIRROR/: download_results.json  download_tree.txt  llms.txt  resources.md
SPECIALIZED_CONTEXT_AND_DOCS/LIVEKIT_DOCS_MIRROR/: agents.md  download_results.json  download_tree.txt  llms.txt  sip.md
SPECIALIZED_CONTEXT_AND_DOCS/OPENAI_API_DOCS_MIRROR/: manifest.json
SPECIALIZED_CONTEXT_AND_DOCS/SHELF_DOCS/: Chatbot_Content_Mappings.md  Content_Access_APIs.md  Content_Discovery_APIs.md  Content_Searches.md  Integrating_Shelf_as_Knowledge_Source.md  Self_Service_Portals.md  Understanding_Content_Segments.md
SPECIALIZED_CONTEXT_AND_DOCS/TRANSFORMERS_DOCS_MIRROR/: README.md  manifest.json
SPECIALIZED_CONTEXT_AND_DOCS/TRANSFORMERS_DOCS_SITE_MIRROR/: README.md  manifest-en.json
SPECIALIZED_CONTEXT_AND_DOCS/UV_DOCS_MIRROR/: README.md  manifest.json
SPECIALIZED_CONTEXT_AND_DOCS/agentic_patterns/: agents_v2.md
SPECIALIZED_CONTEXT_AND_DOCS/gemini/: gemini_pdf.py  genai1.md  genai4.md  genai_chats.md  genai_clients.md  genai_fs_2.md  genai_full_scrape_20250621.md
SPECIALIZED_CONTEXT_AND_DOCS/openai/: gpt5_hack_ideas_CC.md  gpt5_new_params_and_tools.md  gpt5_prompting.md  openai_api_doc_from_web.md  openapi.documented.yml
SPECIALIZED_CONTEXT_AND_DOCS/terminal_management/: tmux.md
SPECIALIZED_CONTEXT_AND_DOCS/voice_ai/: agent_deletes_room.py  agents_build.md  agents_ops_deployment.md  agents_start_telephony.md  agents_worker.md  home_egress_overview.md  home_ingress_overview.md  livekit_agents_workflows.md  livekit_camera_microphone.md  livekit_egress.md  livekit_full_docs.md  livekit_ingress.md  livekit_state_synchronization_participant_attributes_metadata.md  livekit_turn_detection.md  livekit_webhooks.md  openai_voice_api_notes.md  sip_cloud_region_pinning.md  sip_overview.md  voice_agents_reference_links.md
SPECIALIZED_CONTEXT_AND_DOCS/web_material/: blog_posts.md
code/: personas.py
crv3/rules/: agent.mdc  environment.mdc  files.mdc  general_guidelines.mdc  queries.mdc
ostrat/: general_guidelines.md  memory_bank.md  plans.md  structure.md  tests.md
ostrat/rules/: agent.mdc  environment.mdc  general_guidelines.mdc  thinktool.mdc
src/: .gitignore
src/AGENTS.md.brainstorming/: AGENTS-20251204.md  AGENTS-friction.xml  (+8 more)
(+3990 files in other folders)
