[tool.poetry]
name = "prompts"
version = "0.1"
description = "Prompts & scripts for LLMs, agents, and more"
authors = ["Jeff Coggshall <thenextlocalminima@gmail.com>"]
readme = "README.md"
packages = [
    { include = "cot_reasoning", from = "src" },
    { include = "data_processing", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "^1.26.4"
pandas = "^2.2.0"
pip = "^24.0.0"
ipykernel = ">=6.29,<7.0"
openai = "^1.50.0"
anthropic = "^0.30.0"
langchain = "^0.3.0"
llama-index = "^0.11.15"
ell-ai = ">=0.0.7,<0.2.0"
pdfplumber = "^0.11.0"
pdf2image = "^1.17.0"
pymupdf = "^1.24.1"
Pillow = "^10.4.0"
defusedxml = "^0.7.0"
olefile = "^0.47.0"

[tool.coverage.run]
source = ["src"]

[project.urls]
"Homepage" = "https://github.com/voxmenthe/prompts"
"Bug Tracker" = "https://github.com/voxmenthe/prompts/issues"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
