[project]
name = "prompts"
version = "0.1.0"
description = "Prompts & scripts for LLMs, agents, and more"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Jeff Coggshall", email = "thenextlocalminima@gmail.com" }
]
dependencies = [
    "numpy>=1.26.4,<2.0.0",
    "pandas>=2.2.0,<3.0.0",
    "ipykernel>=6.29,<7.0",
    "openai>=1.50.0,<2.0.0",
    "anthropic>=0.30.0,<0.31.0",
    "langchain>=0.3.0,<0.4.0",
    "llama-index>=0.11.15,<0.12.0",
    "ell-ai>=0.0.7,<0.2.0",
    "pdfplumber>=0.11.0,<0.12.0",
    "pdf2image>=1.17.0,<2.0.0",
    "pymupdf>=1.24.1,<2.0.0",
    "Pillow>=10.4.0,<11.0.0",
    "defusedxml>=0.7.0,<0.8.0",
    "olefile>=0.47.0,<0.48.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0,<9",
  "ruff>=0.5.5,<1",
  "pyright>=1.1.377,<2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src"]
typeCheckingMode = "basic"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src"]

[project.urls]
Homepage = "https://github.com/voxmenthe/prompts"
"Bug Tracker" = "https://github.com/voxmenthe/prompts/issues"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

# uv-specific configuration and scripts
[tool.uv]
managed = true
package = false
default-groups = ["dev"]
required-version = ">=0.8.0"

# Note: uv does not currently support [tool.uv.scripts].
# Use [dependency-groups] for dev tools and invoke them via e.g.:
#   uv run ruff check .
#+  uv run pytest
