[project]
name = "prompts"
version = "0.1.0"
description = "Prompts & scripts for LLMs, agents, and more"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Jeff Coggshall", email = "thenextlocalminima@gmail.com" }
]
dependencies = [
    "numpy",
    "ipykernel",
    "openai",
    "anthropic",
    "langchain",
    "huggingface_hub",
    "ell-ai",
    "pyyaml",
    "pdfplumber",
    "pdf2image",
    "pymupdf",
    "Pillow",
    "defusedxml",
    "olefile",
    "attachments",
    "cloudscraper",
    "beautifulsoup4",
    "markdownify",
    "readability-lxml",
    "lxml",
    "quickjs",
    "bs4>=0.0.2",
    "config>=0.5.1",
]

[dependency-groups]
dev = [
  "pytest",
  "ruff",
  "pyright",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src"]
typeCheckingMode = "basic"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src"]

[project.urls]
Homepage = "https://github.com/voxmenthe/prompts"
"Bug Tracker" = "https://github.com/voxmenthe/prompts/issues"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

# uv-specific configuration and scripts
[tool.uv]
managed = true
package = false
default-groups = ["dev"]
required-version = ">=0.8.0"

# Note: uv does not currently support [tool.uv.scripts].
# Use [dependency-groups] for dev tools and invoke them via e.g.:
#   uv run ruff check .
#+  uv run pytest
